# accounts-integration

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: accounts_integration_grpc_service.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app_ctx.rs  settings.rs
src/flows/: create_account.rs  get_accounts.rs  mappers.rs  mod.rs  update_account_trading_disabled.rs  update_balance.rs
src/grpc/: accounts_integration_grpc_service.rs  mappers.rs  mod.rs  server.rs
src/grpc/clients/: accounts_manager_grpc_client.rs
src/grpc_clients/: accounts_manager_grpc_client.rs  mod.rs
src/grpc_server/: accounts_integration_grpc_service.rs  grpc_service.rs  mod.rs
src/internal_scripts/: check_account_currency.rs  check_trading_group.rs  mod.rs
