[package]
name = "accounts-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-grpc-extensions = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
tokio-test = "0.4.2"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }