[package]
name = "accounts-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "grpc",
    "macros",
    "my-nosql-data-reader-sdk",
] }

my-nosql-contracts = { tag = "0.1.28", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }

async-trait = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
tokio-test = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
